--- a/client/src/components/helpers/ExpertiseBlocks.css
+++ b/client/src/components/helpers/ExpertiseBlocks.css
@@ -168,7 +168,7 @@
         flex-direction: column;
         align-items: center;
         background-image: url('https://i.imgur.com/UTaX1hf.webp');
-        background-size: cover;
+        background-size: contain;
         background-position: center;
         background-attachment: fixed;
     }
@@ -183,6 +183,12 @@
     .home-expertise .fas {
         color: rgb(143, 0, 72);
         font-size: 1.2rem;
+    }
+    .expertise-header-description {
+        width: 80%;
+    }
+    .expertise-header {
+        font-size: 2rem;
     }
     .expertise-grid {
         display: flex;
