--- a/client/src/components/helpers/navbarHelpers/ForesightSquare.css
+++ b/client/src/components/helpers/navbarHelpers/ForesightSquare.css
@@ -221,7 +221,7 @@ h3.foresight-subheader {
     
     
         box-shadow: inset 0 0 0 6px var(--c);
-        mix-blend-mode: difference;
+        mix-blend-mode: multiply;
         pointer-events: none;
         content: "";
         background-color: rgba(255, 255, 255, 0.06);
@@ -290,6 +290,8 @@ h3.foresight-subheader {
         width: 89vw;
         height: 518px;
         top: 16px;
+        mix-blend-mode: multiply;
+        
     }
     #form-div a {
         margin: 2px 10px 5px 10px;
