patched portal link bug, added PA's

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -896,7 +896,9 @@ img {
     font-size: 2rem;
     margin: 35px 0;
 }
-
+.physician-image {
+    width: 80%;
+}
 .page-description {
     font-size: 1rem;
 }
