patched portal link bug, added PA's

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -931,6 +931,8 @@ img {
 .physician-left {
     width: 40%;
     padding: 50px 50px 50px 15px;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .physician-right {
