--- a/client/src/components/helpers/navbarHelpers/ContactNav.css
+++ b/client/src/components/helpers/navbarHelpers/ContactNav.css
@@ -235,6 +235,7 @@
   }
   .navbar-container {
     max-height: 60px;
+    min-height: 66px;
   }
   .nav-button {
     padding: 0px 0px 0px 0px;
@@ -242,13 +243,18 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    height: fit-content;
     z-index: 8;
+    min-width: max-content;
+    font-size: 0.8rem;
   }
   .nav-phone-and-seperater {
     display: flex;
     flex-direction: row;
-    margin: 5px;
+    margin: 0px 0px 0px 0px;
+    padding: 6px 0px 6px 0px;
     z-index: 8;
+    min-height: 6px;
 }
   #nav-phone {
     margin: 0px 5px 0px 2px;
@@ -293,7 +299,36 @@
   }
 }
 
+@media (max-width: 380px) {
+  .navbar-container {
+    max-height: 60px;
+    min-height: 50px;
+  }
+  .nav-button {
+    padding: 0px 0px 0px 0px;
+    margin: 5px 5px 0px 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: fit-content;
+    z-index: 8;
+    min-width: max-content;
+    font-size: unset;
+  }
+  .nav-phone-and-seperater {
+    /* display: flex;
+    flex-direction: row;
+    margin: 0px 0px 0px 0px;
+    padding: 2px 0px 2px 0px;
+    z-index: 8; */
+    padding: 2px 0px 2px 0px;
+  }
+}
+
 @media (max-width: 350px) {
+  .navbar-container {
+    min-height: 40px;
+  }
   #nav-phone {
     font-size: 0.7rem;
   }
@@ -302,5 +337,9 @@
   }
   .riverside-call-directions {
     min-width: 105px;
+  }
+
+  .nav-button {
+    min-width: 60px;
   }
 }
