New content added from Kevin and Daniel

--- a/client/src/components/helpers/navbarHelpers/Navbar.css
+++ b/client/src/components/helpers/navbarHelpers/Navbar.css
@@ -139,7 +139,7 @@
 
 
 
-@media (max-width: 976px) {
+@media (max-width: 1000px) {
   
   .navbar-container {
     padding: 5px 5px 5px 5px;
@@ -148,27 +148,30 @@
     display: flex;
     text-align: center;
     font-size: 4rem;
+    padding-right: 20px;
+    font-size: 4rem;
   }
   .mobile-menu-button-navbar .fa-bars:before {
     animation: colorAnimation 3s infinite; /* Apply the color animation */
   }
-@keyframes colorAnimation {
-  0% {
-    color: white; /* Start color */
+  @keyframes colorAnimation {
+    0% {
+      color: white; /* Start color */
+    }
+    50% {
+      color: rgb(201, 199, 199); /* Intermediate color */
+    }
+    100% {
+      color: rgb(247, 243, 243); /* End color */
+    }
   }
-  50% {
-    color: rgb(201, 199, 199); /* Intermediate color */
-  }
-  100% {
-    color: rgb(247, 243, 243); /* End color */
-  }
-}
   .logo-link-navbar h2 {
     display: none;
   }
   .navbar-buttons-nav {
     font-size: 1rem;
-    width: 100%;
+    min-width: max-content;
+
   }
   .navbar-buttons-nav a {
     font-size: 1rem;
@@ -189,14 +192,117 @@
     box-shadow: -1px 1px 0 0 rgba(192, 192, 192,1), -2px 2px 0 0 rgba(192, 192, 192,0.6), -4px 4px 0 0 rgba(192, 192, 192,0.4), -6px 6px 0 0 rgba(192, 192, 192,0.2); /* Adjusted box shadow on hover */
   }
   .submenu-two-column {
-    max-width: 50vw;
+    max-width: 100vw;
+    min-width: unset;
+    grid-gap: 0px 0px;
     margin: 0px;
   }
   .submenu-two-column .sub-link {
     width: 50vw;
   }
+  .submenu {
+    width: 100vw;
+    padding: 0px;
+  }
+  .submenu-two-column .sub-link {
+    max-width: 50vw;
+    padding: 20px 0px 20px 0px;
+    font-size: 1.2rem;
+  }
+  .sub-link {
+    font-size: 1.2rem;
+    padding: 20px 0px 20px 0px;
+  }
+  .sub-link.mobile-nav-link {
+    font-size: 1.2rem;
+    width: 100%;
+    padding: 20px 0px 20px 0px;
+  }
 }
+@media (max-width: 750px) {
+  .navbar-logo {
+    max-width: 125px;
+    padding-left: 5px;
+  }
+  .mobile-menu-button-navbar {
+    padding-right: 10px;
+    font-size: 3.5rem;
+  }
+  .navbar-buttons-nav {
+    min-width: max-content;
+  }
+  .submenu {
+    width: 100vw;
+    padding: 0px;
+  }
+  .submenu-two-column {
+    max-width: 100vw;
+    min-width: unset;
+    grid-gap: 0px 0px;
+  }
+  .submenu-list {
+    width: 100vw;
+    min-height: fit-content;
 
+  }
+  .submenu-two-column .sub-link {
+    max-width: 50vw;
+    padding: 20px 0px 20px 0px;
+    font-size: 1rem;
+  }
+
+  .sub-link {
+    font-size: 1rem;
+    padding: 20px 0px 20px 0px;
+  }
+  .sub-link.mobile-nav-link {
+    font-size: 1rem;
+    width: 100%;
+    padding: 20px 0px 20px 0px;
+  }
+}
+@media (max-width: 475px) {
+  .navbar-logo {
+    max-width: 125px;
+    padding-left: 5px;
+  }
+  .mobile-menu-button-navbar {
+    padding-right: 10px;
+    font-size: 3.5rem;
+  }
+  .navbar-buttons-nav {
+    min-width: max-content;
+  }
+  .submenu {
+    width: 100vw;
+    padding: 0px;
+  }
+  .submenu-two-column {
+    max-width: 100vw;
+    min-width: unset;
+    grid-gap: 0px 0px;
+  }
+  .submenu-list {
+    width: 100vw;
+    min-height: fit-content;
+
+  }
+  .submenu-two-column .sub-link {
+    max-width: 50vw;
+    padding: 20px 0px 20px 0px;
+    font-size: 1rem;
+  }
+  .sub-link {
+    font-size: 1rem;
+    padding: 20px 0px 20px 0px;
+
+  }
+  .sub-link.mobile-nav-link {
+    font-size: 1rem;
+    width: 100%;
+    padding: 20px 0px 20px 0px;
+  }
+}
 @media (max-width: 415px) {
   .nav-button {
     font-size: unset;
