--- a/client/src/pages/about/helpers/About.css
+++ b/client/src/pages/about/helpers/About.css
@@ -360,9 +360,9 @@
         /* ----------------------------------------------------------- */
         background-image: url(https://i.imgur.com/mPscUmh.webp);
         /* ----------------------------------------------------------- */
-        background-size: cover;
+        background-size: initial;
         background-position: top;
-        background-repeat: no-repeat;
+        background-repeat: repeat;
     }
     .about-div-responsive {
         position: relative;
@@ -466,6 +466,8 @@
         text-align: center;
         display: flex;
         flex-direction: column;
+        backdrop-filter: blur(5px);
+        -webkit-backdrop-filter: blur(5px);
     }
     .about-div-bulleted-bring p {
         width: 100%;
@@ -819,6 +821,7 @@
     }
     .unordered-list-about {
         gap: 2px 2px;
+        height: unset;
     }
     .unordered-list-about li {
         font-size: 0.7rem;
