added printer friendly staff overview

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -576,6 +576,55 @@ img {
 
 }
 
+.print-staff {
+    font-size: 0.9rem;
+    font-family: sans-serif;
+    z-index: 10;
+    border-radius: 0px;
+    border: 2px solid rgba(143, 0, 72, 0.8);
+    padding: 10px;
+    box-shadow: 6px 4px rgba(143, 0, 72, 0.8);
+    margin: 40px auto;
+    padding: 10px 10px 10px 10px;
+    text-decoration-line: none;
+    cursor: pointer;
+    transition: transform 0.3s;
+}
+
+.print-staff:hover {
+    /* transform: translateY(-3px); */
+    font-size: 1rem;
+}
+
+.print-staff:active {
+    transform: scale(0.95);
+}
+
+.team-print-staff {
+    font-size: 1rem;
+    font-family: sans-serif;
+    z-index: 10;
+    border-radius: 0px;
+    border: 2px solid rgba(221, 228, 237, 0.8);
+    padding: 10px;
+    box-shadow: 6px 4px rgba(221, 228, 237, 0.8);
+    margin: 40px auto;
+    padding: 10px 10px 10px 10px;
+    color: white;
+    text-decoration-line: none;
+    background-color: rgba(221, 228, 237, 0.6);
+    cursor: pointer;
+    transition: transform 0.3s;
+}
+
+.team-print-staff:hover {
+    /* transform: translateY(-3px); */
+    font-size: 1.3rem;
+}
+
+.team-print-staff:active {
+    transform: scale(0.99);
+}
 
 .sub-link {
     padding: 15px 20px 15px 20px;
