--- a/client/src/pages/lazyHome/helpers/TeamComponent.css
+++ b/client/src/pages/lazyHome/helpers/TeamComponent.css
@@ -14,6 +14,10 @@
     position: relative;
     max-height: 300px;
 }
+.team-inner-div {
+    display: flex;
+    justify-content: space-around;
+}
 .follow-us-title {
     margin: 30px auto;
     text-align: center;
