--- a/client/src/pages/lazyHome/helpers/TeamComponent.css
+++ b/client/src/pages/lazyHome/helpers/TeamComponent.css
@@ -21,7 +21,7 @@
 .follow-us-title {
     margin: 30px auto;
     text-align: center;
-    padding: 10px 15px;
+    padding: 20px 45px;
     font-size: 3rem;
     font-family: sans-serif;
     max-width: 840px;
@@ -66,7 +66,7 @@
     .follow-us-title {
         margin: 10px auto;
         text-align: center;
-        padding: 0px 0px;
+        padding: 0px 40px;
         font-size: 2.6rem;
         font-family: sans-serif;
         max-width: unset;
@@ -80,6 +80,9 @@
         justify-content: space-evenly;
         align-items: center;
         font-size: 1rem;
+    }
+    .team-second-inner-div {
+
     }
 }
 
