--- a/client/src/pages/lazyHome/helpers/TeamComponent.css
+++ b/client/src/pages/lazyHome/helpers/TeamComponent.css
@@ -81,8 +81,16 @@
         align-items: center;
         font-size: 1rem;
     }
+    
+    .team-icon-container a {
+        margin: 2px;
+    }
     .team-second-inner-div {
-
+        /* display: flex; */
+        /* flex-direction: row; */
+    }
+    .team-print-staff {
+        font-size: 0.8rem;
     }
 }
 
@@ -95,7 +103,8 @@
         max-height: 10px;
     }
     .follow-us-title {
-        font-size: 1.5rem;
+        font-size: 1.2rem;
+        padding: 0px 0px 0px 0px;
     }
     .team-icon-container {
         padding: 0 0 5px 0;
