--- a/client/src/components/helpers/navbarHelpers/MorphingFont.css
+++ b/client/src/components/helpers/navbarHelpers/MorphingFont.css
@@ -16,10 +16,8 @@ body {
     position: relative;
     width: 100%;
     display: inline-block;
-    font-size: 0.8rem;
+    /* font-size: 0.8rem; */
     letter-spacing: 1.5px;
-    text-shadow: 2px 7px 5px rgba(0,0,0,0.7), 
-      0px -4px 10px rgba(255,255,255,0.7);
 
     user-select: none;
     opacity: 0;
@@ -80,10 +78,9 @@ body {
         position: relative;
         width: 100%;
         display: inline-block;
-        font-size: 0.5rem;
+        font-size: 0.8rem;
         letter-spacing: 1.5px;
-        text-shadow: 2px 7px 5px rgba(0,0,0,0.7), 
-        0px -4px 10px rgba(255,255,255,0.7);
+
 
         user-select: none;
         opacity: 0;
@@ -94,7 +91,7 @@ body {
 @media (max-height: 650px) {   
     #text1,
     #text2 {
-        font-size: 0.4rem;
+        font-size: 0.8rem;
         letter-spacing: 1.5px;
 
     }
@@ -106,7 +103,7 @@ body {
         position: relative;
         width: 100%;
         display: inline-block;
-        font-size: 0.7rem;
+        font-size: 0.8rem;
         letter-spacing: 1px;
 
     }
@@ -120,10 +117,9 @@ body {
         position: relative;
         width: 100%;
         display: inline-block;
-        font-size: 0.4rem;
+        font-size: 0.6rem;
         letter-spacing: 1px;
-        text-shadow: 2px 7px 5px rgba(0,0,0,0.7), 
-        0px -4px 10px rgba(255,255,255,0.7);
+
 
         user-select: none;
         opacity: 0;
