--- a/client/src/index.css
+++ b/client/src/index.css
@@ -37,6 +37,7 @@ body {
     height: 100vh;
     overflow-x: hidden;
     max-width: 100vw;
+    box-sizing: border-box;
 
 }
 
@@ -485,29 +486,7 @@ img {
 
 /* NAVBAR STYLES */
 
-.navbar {
-    display: flex;
-    justify-content: center;
-    margin: 20px 0 0 0;
-}
 
-.nav-link-container {
-    position: relative;
-}
-
-.link-items {
-    position: relative;
-}
-
-.nav-link {
-    display: block;
-    /* color: var(--white); */
-    padding: 18px;
-    text-decoration: none;
-    border-bottom: 2px solid transparent;
-    font-family: sans-serif;
-    font-size: 0.9em;
-}
 
 .nav-link:hover {
     background-color: rgba(248, 247, 246, 0.3);
@@ -528,53 +507,16 @@ img {
 .nav-link-container:hover > .nav-link {
     background-color: var(--blue-dark);
 }
-.submenu {
-    position: absolute;
-    background-color: var(--white);
-    z-index: 2;
-    padding: 10px;
-    justify-content: center;
-    text-align: center;
-    opacity: 0; /* Initially hidden */
-    max-height: 0; /* Initially collapsed */
-    overflow: hidden;
-    transition: max-height 0.3s, opacity 0.3s; /* Add transition */
-}
+
 
 .nav-link-container:hover .submenu {
     max-height: fit-content;
     opacity: 1;
 }
 
-.submenu-list {
-    min-width: 240px;
-    display: grid;
-    align-items: center;
-    grid-gap: 0px; /* Adjust the gap between items */
-    padding: 0px 0px 0px 0px;
-    margin: 0px;
-    grid-template-columns: repeat(1, minmax(0, 1fr)); /* Initial three columns */
-    
-}
 
-.submenu-two-column {
-    min-width: 480px;
-    display: grid;
-    align-items: center;
-    grid-gap: 0px 20px; /* Adjust the gap between items */
-    grid-template-columns: repeat(2, minmax(0, 1fr)); /* Initial three columns */
 
-}
 
-.submenu-multi-column {
-    min-width: 860px;
-    display: grid;
-    align-items: center;
-    grid-gap: 0px; /* Adjust the gap between items */
-    padding: 10px;
-    grid-template-columns: repeat(4, minmax(0, 1fr)); /* Initial three columns */
-
-}
 
 .print-staff {
     font-size: 0.9rem;
@@ -2117,33 +2059,11 @@ display: none;
         /* margin: 0 40px 0 0; */
     }
 
-    .mobile-toggle-submenu {
-        position: absolute;
-        height: 100%;
-        width: 100%;
-        top: 0;
-        padding: 0px 10px 0px 4px;
-        margin: 0px;
-        left: 0;
-        background: transparent;
-        border: none;
-        color: var(--white);
-        font-size: 10px;
-        display: flex;
-        align-items: center;
-        cursor: pointer;
-    }
 
     .nav-link {
         padding: 20px 40px;
     }
 
-    .submenu {
-        position: static;
-        flex-direction: column;
-        width: 100%;
-        min-width: 0;
-    }
 
     .sub-link {
         padding: 20px 25px;
