--- a/client/src/components/helpers/navbarHelpers/Navbar.css
+++ b/client/src/components/helpers/navbarHelpers/Navbar.css
@@ -109,7 +109,7 @@
   background-color: rgb(143, 0, 72);
   display: flex;
   flex-direction: column;
-  min-width: 100vw;
+  min-width: min-content;
   /* padding: 20px; */
   text-align: center;
 }
